--- a/scss/secciones/_tiendas.scss
+++ b/scss/secciones/_tiendas.scss
@@ -7,12 +7,12 @@
 @import './secciones/header';
 @import './secciones/_footer';
 
-.body-tienda{
+.body-tienda {
     width: 100%;
     height: 100vh;
 }
 
-.container-us{
+.container-us {
     display: flex;
     height: 88%;
     align-items: center;
@@ -20,19 +20,21 @@
 
 }
 
-.col-container-us{
+.col-container-us {
     flex-basis: 50%;
-}
 
-.col-container-us h1{
-    color: white;
-    font-size: 30px;
-}
 
-.col-container-us h3{
-    color: white;
-    font-size: medium;
-    line-height: 15px;
+    h1 {
+        color: white;
+        font-size: 30px;
+    }
+
+
+    h3 {
+        color: white;
+        font-size: medium;
+        line-height: 15px;
+    }
 }
 
 .gradient-text-tienda {
@@ -42,7 +44,7 @@
     font-weight: bold;
 }
 
-.col-container-us button{
+.col-container-us button {
     width: 180px;
     color: white;
     font-size: 14px;
@@ -54,17 +56,18 @@
     border-radius: 20px;
     outline: none;
     margin-top: 30px;
+
+
+    &:hover {
+        background: rgb(253, 187, 45);
+        background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
+        transform: scale(1.1);
+        box-shadow: 5px 7.5px 5px #331061;
+        transition: 0.5s all;
+    }
 }
 
-.col-container-us button:hover {
-    background: rgb(253, 187, 45);
-    background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
-    transform: scale(1.1);
-    box-shadow: 5px 7.5px 5px #331061;
-    transition: 0.5s all;
-}
-
-.card-tienda{
+.card-tienda {
     width: 200px;
     height: 230px;
     display: inline-block;
@@ -78,38 +81,44 @@
     background-size: cover;
     transition: transform 0.5s;
 
+
+
+    h5 {
+        color: white;
+        background: none;
+        text-shadow: 0 0 5px #fff;
+    }
+
+    p {
+        color: rgb(255, 255, 255);
+        background: none;
+    }
 }
 
-.card-tienda-1{
+.card-tienda-1 {
     background-image: url(https://cdn.shopify.com/s/files/1/2316/3287/products/SF_WEB_SET_GALLERY_14_1500x.jpg?v=1639773900);
 }
-.card-tienda-2{
+
+.card-tienda-2 {
     background-image: url(https://cdn.shopify.com/s/files/1/2316/3287/products/SF_WEB_SET_GALLERY_13_1500x.jpg?v=1639773899)
 }
-.card-tienda-3{
+
+.card-tienda-3 {
     background-image: url(https://images.unsplash.com/photo-1580554430120-94cfcb3adf25?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3RvcmVmcm9udHxlbnwwfHwwfHw%3D&w=1000&q=80)
 }
-.card-tienda-4{
+
+.card-tienda-4 {
     background-image: url(https://cdn.shopify.com/s/files/1/2316/3287/products/SF_WEB_SET_GALLERY_26_1500x.jpg?v=1639773902);
 }
 
-.card-tienda:hover{
+.card-tienda:hover {
     transform: translateY(-10px);
 }
 
-.card-tienda h5{
-    color: white;
-    background: none;
-    text-shadow: 0 0 5px #fff;
-}
 
-.card-tienda p{
-    color: white;
-    background: none;
-}
 
-@media (max-width: 768px){
-    .container-us{
+@media (max-width: 768px) {
+    .container-us {
         flex-direction: column;
         align-items: center;
     }
