--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -7,6 +7,10 @@
 @import './secciones/header';
 @import './secciones/_footer';
 
+body{
+    background-color: $color-fondo;
+}
+
 .container-form {
     min-height: calc(100vh-40px*2);
     display: grid;
