--- a/scss/secciones/_galletas.scss
+++ b/scss/secciones/_galletas.scss
@@ -9,33 +9,33 @@
 
 /*-------------------------- Sección Galletas----------------------------- */
 
-.texto-cookie-flex{
-    color: rgb(255, 255, 255);  
+.texto-cookie-flex {
+    color: rgb(255, 255, 255);
     font-family: 'Quicksand', sans-serif;
-    line-height: 2rem;  
+    line-height: 2rem;
     align-items: center;
     width: 50vw;
     margin-left: 25vw;
     text-align: center;
+
+    h2 {
+        background: -webkit-linear-gradient(10deg, #f033ba 40%, rgba(0, 212, 255, 1) 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        font-size: larger;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    h3 {
+        font-size: larger;
+    }
 }
 
-.texto-cookie-flex h2{
-    background: -webkit-linear-gradient(10deg, #f033ba 40%, rgba(0, 212, 255, 1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: larger;
-    font-weight: bold;
-    text-align: center;
-}
 
-.texto-cookie-flex h3{
-    font-size: larger;
-}
-
-
-.wrapper-grid-galletas{
+.wrapper-grid-galletas {
     display: grid;
-    grid-template-columns:repeat(auto-fit, 20rem);
+    grid-template-columns: repeat(auto-fit, 20rem);
     justify-content: center;
     grid-gap: 3%;
     margin: 0.5rem;
@@ -44,7 +44,7 @@
     margin-bottom: 0;
 }
 
-.container-galletas{
+.container-galletas {
     /* box-shadow: 5px 5px 9px -1px rgba(0,0,0,0.35);
     -webkit-box-shadow: 5px 5px 9px -1px rgba(0,0,0,0.35);
     -moz-box-shadow: 5px 5px 9px -1px rgba(0,0,0,0.35); */
@@ -57,30 +57,39 @@
     margin-top: none;
     font-family: 'Quicksand', sans-serif;
     background-color: #e3dfd2;
+
+&:hover {
+    transform: scale(1.05);
+    transition: 0.5s;
+    box-shadow: 5px 5px 9px -1px rgba(0, 0, 0, 0.35);
+    -webkit-box-shadow: 5px 5px 9px -1px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 5px 5px 9px -1px rgba(0, 0, 0, 0.35);
+
+}
 }
 
-.cookie-product{
+.cookie-product {
     width: 100%;
 }
 
-.name{
+.name {
     font-size: 1rem;
     color: #f033ba;
     font-weight: bold;
-    background-color:#e3dfd2;
+    background-color: #e3dfd2;
     margin-top: 15px;
     font-size: large;
 }
 
-.description{
+.description {
     margin: 1rem 1rem;
     font-size: 0.9rem;
     color: black;
-    background-color:#e3dfd2;
+    background-color: #e3dfd2;
     margin-top: 0%;
 }
 
-.btn{
+.btn {
     width: 100%;
     border: none;
     font-size: 1rem;
@@ -89,26 +98,19 @@
     background-color: #5923a0;
     padding: 0.5rem;
     font-family: 'Quicksand', sans-serif;
-    /* font-family: 'Pacifico', cursive; */ 
+    /* font-family: 'Pacifico', cursive; */
     margin-top: -1%;
 }
 
-.container-galletas:hover{
-    transform: scale(1.05);
-    transition: 0.5s;
-    box-shadow: 5px 5px 9px -1px rgba(0,0,0,0.35);
-    -webkit-box-shadow: 5px 5px 9px -1px rgba(0,0,0,0.35);
-    -moz-box-shadow: 5px 5px 9px -1px rgba(0,0,0,0.35);
 
-}
 
-@media (max-width:768px){
+@media (max-width:768px) {
     .wrapper-grid-galletas {
         margin-bottom: 15%;
     }
 }
 
-@media (max-width:425px){
+@media (max-width:425px) {
     .wrapper-grid-galletas {
         margin-bottom: 350px;
     }
