--- a/scss/secciones/_home.scss
+++ b/scss/secciones/_home.scss
@@ -11,9 +11,15 @@
     -webkit-text-fill-color: transparent;
     font-weight: bold;
     margin: 18vw;
+
+
+    span {
+        font-weight: bold;
+    }
+
 }
 
-.banner-principal-flex{
+.banner-principal-flex {
     display: flex;
     flex-wrap: nowrap;
 
@@ -25,10 +31,10 @@
     width: 40vh;
 }
 
-.grid-main-container{
+.grid-main-container {
     display: flex;
     flex-wrap: wrap;
-    
+
 
 }
 
@@ -40,16 +46,12 @@
     text-align: center;
 }
 
-.gradient-text-2{
+.gradient-text-2 {
     background: -webkit-linear-gradient(10deg, #d227a1 40%, rgba(0, 212, 255, 1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
 
-}
-
-.gradient-text span {
-    font-weight: bold;
 }
 
 /* --------------------------Seccion 3-------------------------------- */
@@ -62,11 +64,12 @@
     font-size: larger;
     /* line-height: 30pt; */
     color: white;
-}
 
-.cookie-truck:hover {
-    transform: scale(1.1);
-    transition: 0.5s;
+
+    &:hover {
+        transform: scale(1.1);
+        transition: 0.5s;
+    }
 }
 
 .row h2 {
@@ -106,18 +109,18 @@
 
 }
 
-@media (max-width:768px){
-    .navbar>.container-fluid{
+@media (max-width:768px) {
+    .navbar>.container-fluid {
         display: flex;
         align-items: center;
         justify-content: space-around;
     }
 
-    #banner-home img{
+    #banner-home img {
         width: 430px;
     }
 
-    .img-seccion-1 img{
+    .img-seccion-1 img {
         width: 250px;
     }
 
@@ -126,7 +129,7 @@
 
     }
 
-    .seccion-2-flex img{
+    .seccion-2-flex img {
         flex-wrap: nowrap;
         width: 25vh;
     }
@@ -142,45 +145,45 @@
         margin-top: 10%;
     }
 
-    .img-seccion-3{
+    .img-seccion-3 {
         display: flex;
         flex-wrap: nowrap;
         margin-top: 5%;
     }
 
-    .footer{
+    .footer {
         margin: 0%;
         padding: 0%;
     }
 
-    .gradient-text{
+    .gradient-text {
         margin: 3vw;
     }
 
 }
 
 
-@media (max-width:425px){
-    
+@media (max-width:425px) {
+
     .banner-principal-flex {
         display: flex;
         flex-wrap: wrap;
     }
-    
-    #banner-home img{
+
+    #banner-home img {
         width: 300px;
     }
 
-    .texto-2{
+    .texto-2 {
         margin-left: 20vw;
         width: 50vw;
     }
 
-    .galleta-cute img{
+    .galleta-cute img {
         width: 200px;
     }
 
-    .texto-1{
+    .texto-1 {
         margin-left: 20vh;
         width: 30vh;
         font-size: large;
@@ -196,12 +199,12 @@
         margin-top: 5%;
     }
 
-    .footer{
+    .footer {
         font-size: small;
         text-align: center;
     }
 
-    .footer img{
+    .footer img {
         width: 200px;
 
     }
@@ -210,14 +213,14 @@
 
 
 @media (max-width:320px) {
-    
-    .texto-1{
+
+    .texto-1 {
         width: 100%;
         font-size: large;
         margin-left: 0;
     }
 
-    #banner-home img{
+    #banner-home img {
         margin-left: -20px;
         padding: 0;
         width: 280px;
@@ -228,20 +231,20 @@
         width: 70vw;
     }
 
-    .footer{
+    .footer {
         margin: -10%;
     }
 }
 
-@media (max-width:268px){
-   
-    .texto-1{
+@media (max-width:268px) {
+
+    .texto-1 {
         width: 100%;
         font-size: large;
         margin-left: 10px;
     }
 
-    #banner-home img{
+    #banner-home img {
         margin-left: -40px;
         padding: 0;
         width: 280px;
@@ -257,22 +260,21 @@
         width: 70vw;
     }
 
-    .button-1{
+    .button-1 {
         margin-left: -55px;
     }
 
-    .footer{
+    .footer {
         margin: -25%;
     }
 
-    .animate__animate__wobble{
+    .animate__animate__wobble {
         width: 1px;
-        
+
     }
-    
-    .cookie-con-lentes{
+
+    .cookie-con-lentes {
         width: 120px;
         margin-left: -13px;
     }
 }
-
