--- a/scss/secciones/_nosotros.scss
+++ b/scss/secciones/_nosotros.scss
@@ -2,22 +2,23 @@
 @import './utilidades/typo';
 @import './utilidades/reset';
 
-.about-us{
+.about-us {
     width: 100%;
     padding: 78px 0;
+
+
+    img {
+        height: auto;
+        width: 420px;
+    }
 }
 
-.about-us img{
-    height: auto;
-    width: 420px;
-}
-
-.about-text{
+.about-text {
     width: 550px;
     color: white;
 }
 
-.principal{
+.principal {
     width: 1130px;
     max-width: 95%;
     margin: 0 auto;
@@ -26,41 +27,32 @@
     justify-content: space-around;
 }
 
-.gradient-about{ background: -webkit-linear-gradient(10deg, #d227a1 40%, rgba(0, 212, 255, 1) 100%);
+.gradient-about {
+    background: -webkit-linear-gradient(10deg, #d227a1 40%, rgba(0, 212, 255, 1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bolder;
     font-family: 'Pacifico', cursive;
 }
 
-.cursive-about{
+.cursive-about {
     font-family: 'Pacifico', cursive;
 }
 
-.about-text h1{
+.about-text h1 {
     color: white;
     font-family: 'Pacifico', cursive;
 
+    p {
+        color: white;
+        letter-spacing: 1px;
+        line-height: 28px;
+        font-size: small;
+        margin-bottom: 45px;
+    }
 }
 
-/* .about-text h5{
-    color: white;
-    font-size: 25px;
-    text-transform: capitalize;
-    margin-bottom: 25px;
-    letter-spacing: 2px;
-    font-size: 18px;
-} */
-
-.about-text p{
-    color: white;
-    letter-spacing: 1px;
-    line-height:28px;
-    font-size: small;
-    margin-bottom: 45px;
-}
-
-.button-about{
+.button-about {
     color: white;
     background: rgb(210, 39, 161);
     background: linear-gradient(90deg, #d227a1 26%, rgba(51, 16, 97, 1) 100%);
@@ -72,32 +64,32 @@
     padding: 13px 30px;
     border-radius: 35px;
     transition: .4s all;
-}
 
-.button-about:hover{
+&:hover {
     background: rgb(253, 187, 45);
     background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
     transform: scale(1.2);
     cursor: pointer;
 }
+}
 
-@media (max-width:768px){
+@media (max-width:768px) {
     .principal {
         flex-direction: column-reverse
     }
-} 
+}
 
-@media (max-width:1024px){
+@media (max-width:1024px) {
     .principal {
         flex-direction: column-reverse
     }
 
-    .principal img{
+    .principal img {
         margin-top: 10%;
     }
-} 
+}
 
-@media (max-width:425px){
+@media (max-width:425px) {
 
     .principal {
         flex-direction: column-reverse;
@@ -105,20 +97,20 @@
 
     }
 
-    .about-us{
+    .about-us {
         width: 10vw;
         align-items: center;
     }
 
-    .about-text{
+    .about-text {
         max-width: 70vw;
         justify-content: center;
         margin-left: 200px;
         margin-top: -50px;
-        
+
     }
 
-    .principal img{
+    .principal img {
         width: 250px;
         margin-left: 10px;
         margin-top: 120px;
