--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,48 @@ ul a {
   display: flex;
   flex-wrap: nowrap; }
 
+.banner-principal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row-reverse; }
+
+.titulo-banner-principal {
+  background: -webkit-linear-gradient(10deg, #d227a1 40%, #00d4ff 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: bold; }
+
+.img-banner-principal img {
+  border-radius: 10px; }
+
+.right-banner-principal {
+  justify-content: center;
+  align-content: center; }
+  .right-banner-principal h3 {
+    font-size: 15px;
+    font-weight: bold; }
+
+.left-banner-principal {
+  margin: 5%; }
+
+.button-principal {
+  width: 350px;
+  height: 50px;
+  border-radius: 40px;
+  color: white;
+  font-size: 20px;
+  background: #d227a1;
+  background: linear-gradient(90deg, #d227a1 26%, #331061 100%);
+  box-shadow: 10px 15px 10px #331061;
+  border: #331061;
+  margin: 20px 20px; }
+  .button-principal:hover {
+    background: #fdbb2d;
+    background: linear-gradient(118deg, #fdbb2d 2%, #d2279d 60%, #331061 96%);
+    transform: scale(1.2);
+    transition: 1s all; }
+
 /* ------------------------Seccion 1---------------------------- */
 .texto-1 {
   font-weight: bold;
@@ -135,12 +177,21 @@ ul a {
   box-shadow: 10px 15px 10px #331061;
   border: #331061;
   margin: 20px 20px; }
+  .button-1 button:hover {
+    background: #fdbb2d;
+    background: linear-gradient(118deg, #fdbb2d 2%, #d2279d 60%, #331061 96%);
+    transform: scale(1.2);
+    transition: 1s all; }
 
-.button-1 button:hover {
-  background: #fdbb2d;
-  background: linear-gradient(118deg, #fdbb2d 2%, #d2279d 60%, #331061 96%);
-  transform: scale(1.2);
-  transition: 1s all; }
+@media (max-width: 1024px) {
+  .right-banner-principal h2 {
+    font-size: 20px; }
+  .right-banner-principal h1 {
+    font-size: 30px; }
+  .button-principal {
+    width: 250px;
+    font-size: 15px;
+    height: 40px; } }
 
 @media (max-width: 768px) {
   .navbar > .container-fluid {
