--- a/scss/secciones/_home.scss
+++ b/scss/secciones/_home.scss
@@ -25,6 +25,62 @@
 
 }
 
+//---------------- Banner principal v2 ---------------------//
+
+.banner-principal{
+    display: flex;
+    // padding: 4%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row-reverse;
+}
+
+.titulo-banner-principal{
+    background: -webkit-linear-gradient(10deg, #d227a1 40%, rgba(0, 212, 255, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+}
+
+.img-banner-principal img{
+    border-radius: 10px;
+}
+
+.right-banner-principal{
+    justify-content: center;
+    align-content: center;
+
+    h3{
+        font-size: 15px;
+        font-weight: bold;
+    }
+}
+
+.left-banner-principal{
+    margin: 5%;
+    
+}
+
+.button-principal{
+    width: 350px;
+    height: 50px;
+    border-radius: 40px;
+    color: white;
+    font-size: 20px;
+    background: rgb(210, 39, 161);
+    background: linear-gradient(90deg, #d227a1 26%, rgba(51, 16, 97, 1) 100%);
+    box-shadow: 10px 15px 10px #331061;
+    border: #331061;
+    margin: 20px 20px;
+
+    &:hover {
+    background: rgb(253, 187, 45);
+    background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
+    transform: scale(1.2);
+    transition: 1s all;
+}
+}
+
 /* ------------------------Seccion 1---------------------------- */
 .texto-1 {
     font-weight: bold;
@@ -34,9 +90,8 @@
 .grid-main-container {
     display: flex;
     flex-wrap: wrap;
-
-
 }
+
 
 
 /*----------------------------Seccion 2---------------------------------- */
@@ -99,14 +154,30 @@
     box-shadow: 10px 15px 10px #331061;
     border: #331061;
     margin: 20px 20px;
-}
 
-.button-1 button:hover {
+    &:hover {
     background: rgb(253, 187, 45);
     background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
     transform: scale(1.2);
     transition: 1s all;
+}
+}
 
+@media (max-width:1024px){
+    .right-banner-principal{
+        h2{
+            font-size: 20px;
+        }
+        h1{
+            font-size: 30px;
+        }
+    }
+
+    .button-principal{
+        width: 250px;
+        font-size: 15px;
+        height: 40px;
+    }
 }
 
 @media (max-width:768px) {
