--- a/scss/secciones/_galletas.scss
+++ b/scss/secciones/_galletas.scss
@@ -114,4 +114,9 @@
     .wrapper-grid-galletas {
         margin-bottom: 350px;
     }
+
+    .texto-cookie-flex {
+        margin: auto;
+    }
+
 }
