--- a/scss/secciones/_home.scss
+++ b/scss/secciones/_home.scss
@@ -27,7 +27,7 @@
 
 //---------------- Banner principal v2 ---------------------//
 
-.banner-principal{
+.banner-principal {
     display: flex;
     // padding: 4%;
     align-items: center;
@@ -35,33 +35,33 @@
     flex-direction: row-reverse;
 }
 
-.titulo-banner-principal{
+.titulo-banner-principal {
     background: -webkit-linear-gradient(10deg, #d227a1 40%, rgba(0, 212, 255, 1) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
 }
 
-.img-banner-principal img{
+.img-banner-principal img {
     border-radius: 10px;
 }
 
-.right-banner-principal{
+.right-banner-principal {
     justify-content: center;
     align-content: center;
 
-    h3{
+    h3 {
         font-size: 15px;
         font-weight: bold;
     }
 }
 
-.left-banner-principal{
+.left-banner-principal {
     margin: 5%;
-    
+
 }
 
-.button-principal{
+.button-principal {
     width: 350px;
     height: 50px;
     border-radius: 40px;
@@ -74,12 +74,59 @@
     margin: 20px 20px;
 
     &:hover {
-    background: rgb(253, 187, 45);
-    background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
-    transform: scale(1.2);
-    transition: 1s all;
+        background: rgb(253, 187, 45);
+        background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
+        transform: scale(1.2);
+        transition: 1s all;
+    }
 }
+
+
+//-----------------Marquee---------------------//
+
+.marquee {
+    // --gap: 1rem;
+    display: flex;
+    overflow: hidden;
+    user-select: none;
+    //   gap: var(--gap);
+    margin-bottom: 30px;
+
+
+    li {
+        font-size: 15px;
+        background-color: $accent-color;
+    }
 }
+
+.marquee-content {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: space-around;
+    min-width: 100vw;
+    // gap: var(--gap);
+    background-color: $accent-color;
+    animation: scroll 10s linear infinite;
+    height: 40px;
+    align-items: center;
+    list-style: none;
+}
+
+.marquee-item {
+    flex-shrink: 0;
+    background-color: $accent-color;
+}
+
+@keyframes scroll {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
 
 /* ------------------------Seccion 1---------------------------- */
 .texto-1 {
@@ -92,6 +139,29 @@
     flex-wrap: wrap;
 }
 
+.seccion-1-texto {
+    margin: auto;
+    width: 80vw;
+
+    h1 {
+        text-align: center;
+    }
+
+    h2 {
+        text-align: center;
+        font-size: 20px;
+    }
+}
+
+.seccion-1-texto-cursive {
+    font-family: $typo-cursiva;
+}
+
+.cute-cookie {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /*----------------------------Seccion 2---------------------------------- */
@@ -151,29 +221,31 @@
     font-family: 'Pacifico', cursive;
     background: rgb(210, 39, 161);
     background: linear-gradient(90deg, #d227a1 26%, rgba(51, 16, 97, 1) 100%);
-    box-shadow: 10px 15px 10px #331061;
-    border: #331061;
     margin: 20px 20px;
+    border: #331061;
+    box-shadow: 10px 15px 10px #331061;
 
     &:hover {
-    background: rgb(253, 187, 45);
-    background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
-    transform: scale(1.2);
-    transition: 1s all;
-}
+        background: rgb(253, 187, 45);
+        background: linear-gradient(118deg, rgba(253, 187, 45, 1) 2%, rgba(210, 39, 157, 1) 60%, rgba(51, 16, 97, 1) 96%);
+        box-shadow: 10px 15px 10px #331061;
+        transform: scale(1.2);
+        transition: 1s all;
+    }
 }
 
-@media (max-width:1024px){
-    .right-banner-principal{
-        h2{
+@media (max-width:1024px) {
+    .right-banner-principal {
+        h2 {
             font-size: 20px;
         }
-        h1{
+
+        h1 {
             font-size: 30px;
         }
     }
 
-    .button-principal{
+    .button-principal {
         width: 250px;
         font-size: 15px;
         height: 40px;
@@ -181,6 +253,11 @@
 }
 
 @media (max-width:768px) {
+
+    .img-banner-principal img {
+        width: 350px;
+    }
+
     .navbar>.container-fluid {
         display: flex;
         align-items: center;
@@ -231,7 +308,77 @@
         margin: 3vw;
     }
 
+    .marquee {
+        // --gap: 1rem;
+        display: flex;
+        overflow: hidden;
+        user-select: none;
+        //   gap: var(--gap);
+        margin-bottom: 30px;
+
+
+        li {
+            font-size: 15px;
+            background-color: $color-fondo;
+        }
+    }
+
+    .marquee-content {
+        flex-shrink: 0;
+        display: flex;
+        // justify-content: space-around;
+        min-width: 100vw;
+        // gap: var(--gap);
+        background-color: $color-fondo;
+        animation: scroll 10s linear infinite;
+        height: 40px;
+        align-items: center;
+        list-style: none;
+    }
+
+    .marquee-item {
+        background-color: $color-fondo ;
+    }
+
+    .cookie-truck {
+
+        margin-bottom: 30px;
+
+        img {
+            width: 150px;
+        }
+    }
+
+    .cute-cookie{
+        width: 250px;
+    }
+
+    .seccion-1-texto{
+
+        h2{
+            font-size: 17px;
+        }
+    }
+
+    .seccion-2-flex{
+        margin-bottom: 30px;
+    }
+
+    .cookie-con-lentes{
+       width: 15vw;
+    }
+
+    .img-seccion-3{
+        width: 60vw;
+    }
+
+    .footer{
+        padding: 0;
+        margin-bottom: 0;
+  
+    }
 }
+
 
 
 @media (max-width:425px) {
@@ -267,18 +414,46 @@
     .img-seccion-3 {
         display: flex;
         flex-wrap: wrap;
-        margin-top: 5%;
+        justify-content: center;
     }
 
     .footer {
         font-size: small;
         text-align: center;
+        
+        img { width: 200px;
+        }
+
+        ul{
+            margin: 0;
+            padding: 0;
+        }
+
+
     }
 
-    .footer img {
-        width: 200px;
-
+    .banner-principal{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
     }
+
+    .seccion-1-texto h1{
+        font-size: 22px;
+    }
+
+    .seccion-1-texto h2{
+        font-size: 14px;
+    }
+
+    #banner-home img {
+        width: 230px;
+    }
+
+
 
 }
 
@@ -346,6 +521,5 @@
 
     .cookie-con-lentes {
         width: 120px;
-        margin-left: -13px;
     }
 }
