--- a/scss/secciones/_tiendas.scss
+++ b/scss/secciones/_tiendas.scss
@@ -123,3 +123,14 @@
         align-items: center;
     }
 }
+
+
+@media (max-width: 425px) {
+    .card-tienda{
+        margin-left: 20vw;
+    }
+    .button-tiendas{
+        margin-left: 21vw;
+    }
+
+}
