--- a/scss/secciones/_tiendas.scss
+++ b/scss/secciones/_tiendas.scss
@@ -134,3 +134,22 @@
     }
 
 }
+
+@media (max-width: 425px){
+    .card-tienda{
+        margin-left: 15vw;
+    }
+    .button-tiendas{
+        margin-left: 16vw;
+    }
+   
+}
+
+@media (max-width: 425px){
+    .card-tienda{
+        margin-left: 11vw;
+    }
+    .button-tiendas{
+        margin-left: 12vw;
+    }
+}
