añadí carrito de compras

--- a/css/style.css
+++ b/css/style.css
@@ -1000,3 +1000,41 @@ ul a {
     margin-bottom: 350px; }
   .texto-cookie-flex {
     margin: auto; } }
+
+    /* header galletas ---------------------------------------------------------------------------*/
+    header{
+
+      width: 100%;
+  }
+  .container{
+      max-width: 1200px;
+      text-align: center;
+      margin: auto;
+  }
+  .header-section{
+      display: flex;
+      justify-content: space-between;
+      margin: auto;
+      align-items: center;
+      position: relative;
+  }
+  .header-section div{
+      position: relative;
+  }
+  .header-section p{
+      position: absolute;
+      top: -24px;
+      right: -8px;
+      background-color: #fff;
+      padding: 1px 6px;
+      border-radius: 50%;
+      color: red;
+      font-weight: 700;
+      font-family: system-ui;
+      line-height: 18px;
+  }
+  .logo{
+      width: 164px;
+      height: 84px;
+      cursor: pointer;
+  }
