--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,4 +10,5 @@
 @import './secciones/tiendas';
 @import './secciones/nosotros';
 @import './secciones/contacto';
-@import './secciones/galletas'
+@import './secciones/galletas';
+@import './secciones/header-galletas'
